--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -162,6 +162,7 @@ $header-font-size: .9rem;
         height: 100%;
         width: 10px;
         cursor: ew-resize;
+        z-index: 10;
       }
     }
 
