--- a/app/scss/_saveform.scss
+++ b/app/scss/_saveform.scss
@@ -35,7 +35,7 @@ $sidebar-item-padding:  6px 10px;
     height: 33px;
     padding: $sidebar-item-padding;
 
-    span {
+    svg {
       height: 18px;
       position: relative;
       top: 3px;
