feat(profile photo): use a default profile photo if no photo is returned
If the `session.profile` is empty, use the default logo.

Right now, the logo is being loaded whether or not we need it. We should lazy load in the future.

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -109,6 +109,8 @@ $header-font-size: .9rem;
       }
 
       img {
+        height: 23px;
+        width: 23px;
         border-radius: 2px;
       }
     }
