refactor(NoDatasets): move no datasets into content pane
1) remove the logo and resize the `NoDatasets` component
2) remove the `/nodatasets` route
3) add `NoDatasets` to the CSSTransition group on the Datasets page, only showing it if the user has no datasets, and only showing the other divs if the user has datasets
4) Add `datasetsSelected` local var in Dataset component. Adjust the sidebars and header for when there is no dataset selected

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -423,6 +423,10 @@ $header-font-size: .9rem;
   font-size: .9rem;
 }
 
+.sidebar-list-header-disabled {
+  color: #646464;
+}
+
 .sidebar-list-item-text {
   padding: $sidebar-item-padding;
   flex-direction: row;
