--- a/app/scss/_transitions.scss
+++ b/app/scss/_transitions.scss
@@ -87,8 +87,8 @@
 }
 
 // inner divs
-#transition-wrap {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
+// #transition-wrap {
+//   position: absolute;
+//   width: 100%;
+//   height: 100%;
+// }
