--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -391,6 +391,7 @@ $header-font-size: .9rem;
       width: 100%;
       background:$appBackground;
       flex: 1;
+      position: absolute;
     }
 
     .commit-nudge {
