--- a/app/scss/_welcome.scss
+++ b/app/scss/_welcome.scss
@@ -85,6 +85,13 @@
   border: solid 1px $border-color;
   border-radius: 5px;
   padding: 12px;
+  text-align: center;
+  font-size: 0.8rem;
+
+  h5 {
+    padding: 10px 0px;
+    font-weight: 500;
+  }
 }
 .no-datasets-options:hover {
   background:$border-color;
