--- a/app/scss/_toast.scss
+++ b/app/scss/_toast.scss
@@ -9,6 +9,7 @@
   right: auto;
   border-radius: 2px;
   transform: translateX(-50%) translateY(100%);
+  z-index: 180;
 
   .icon-inline {
     margin-right: 8px;
