refactor(meta-editor): clickable info-tooltip and tooltip audit

--- a/app/scss/_site.scss
+++ b/app/scss/_site.scss
@@ -599,6 +599,10 @@ a {
   transition: color 0.5s;
   cursor: pointer;
   color: $primary;
+
+  svg path {
+    fill: $primary !important;
+  }
 }
 
 a:hover {
