refactor: inputs use common label component, css improvements

--- a/app/scss/_dialog.scss
+++ b/app/scss/_dialog.scss
@@ -28,7 +28,7 @@ dialog {
     align-items: center;
 
     h1 {
-      font-weight: $font-weight-bold;
+      font-weight: $font-weight-medium;
       font-size: $font-size-lg;
       margin: 0;
       padding: 0;
