--- a/app/scss/_site.scss
+++ b/app/scss/_site.scss
@@ -737,10 +737,11 @@ b {
 
 .code-highlight {
   padding: 2px 8px;
-  background: #f3f3f3;
+  background: #e2e2e2;
   display: inline-block;
   border-radius: 3px;
   margin-top: 8px;
+  font-weight: 500;
 }
 
 .pseudo-link {
