--- a/app/scss/_welcome.scss
+++ b/app/scss/_welcome.scss
@@ -112,6 +112,8 @@
 
 .checkbox-input-container {
   display: flex;
+  align-items: center;
+  font-size: .8rem;
 
   input {
     margin-right: 5px;
