--- a/app/scss/_type.scss
+++ b/app/scss/_type.scss
@@ -59,7 +59,7 @@ h3, .h3 {
   }
 h4, .h4 {
   font-size: $font-size-h4;
-  font-weight: $font-weight-regular;
+  font-weight: $font-weight-medium;
   line-height: 30px;
   }
 h5, .h5 {
