refactor: replace chat icon

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -525,3 +525,9 @@ $header-font-size: .9rem;
     border-radius: 5px;
   }
 }
+
+// special formatting for chat icon
+[data-icon="comment-alt"] {
+  position: relative;
+  top: 2px;
+}
