test(e2e): expand e2e tests
- e2e csv body tests => creates body, commits, makes changes to body and meta, commits again
- e2e json body (object) tests => same as above
- e2e add BAD dataset from network => fails in expected way

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -476,6 +476,18 @@ $header-font-size: .9rem;
   display: inline-block;
 }
 
+.status-dot-modified {
+  background-color: #cab081;
+}
+
+.status-dot-removed {
+  background-color: #e04f4f;
+}
+
+.status-dot-added {
+  background-color: #83d683;
+}
+
 
 ////////////////////////////
 //     Commit Details     //
