--- a/app/scss/_forms.scss
+++ b/app/scss/_forms.scss
@@ -115,6 +115,10 @@ select.form-control {
   margin-bottom: 4px;
 }
 
+.input-label-md {
+  font-size: 1rem;
+}
+
 
 // in order for the label to change color when the input is selected,
 // the label must come after the input in the DOM
