--- a/app/scss/_transitions.scss
+++ b/app/scss/_transitions.scss
@@ -84,6 +84,12 @@
   position:relative;
   height:100%;
   width:100%;
+
+  .transition-wrap {
+    position: absolute;
+    height:100%;
+    width:100%;
+  }
 }
 
 // inner divs
