feat(drag-and-drop): drag and drop a data file to create a dataset
First, we add `showDragDrop` state to the App component. This will get refactored to the state tree. We add a `onDragEnter` handler to the App div. This event will trigger the `drag-drop` div mask to render (this should also get refactored to a separate component, potentially). Currently we have `onDragEnter`, `onDragOver`, `onDragLeave`, and `onDrop` handler attached to the `drag-drop` div mask. `onDragLeave` and `onDrop` close the `drag-drop` mask. This thread was very helpful: https://stackoverflow.com/questions/19841859/full-page-drag-and-drop-files-website

--- a/app/scss/_welcome.scss
+++ b/app/scss/_welcome.scss
@@ -15,8 +15,9 @@
     bottom: 0;
   }
 
-#app-loading { z-index: 201 }
-#app-error { z-index: 200 }
+#app-loading { z-index: 250 }
+#app-error { z-index: 249 }
+#drag-drop { z-index: 200 }
 #welcome-page { z-index: 199 }
 #signup-page { z-index: 198 }
 #signin-page { z-index: 197 }
