feat(App): drag and drop adds file to `CreateModal`
- adjust `CreateDataset` to take a filePath. We pass that filePath through our `validName` function to create a name that will work with Qri. When a filePath is given, we display all the values in the modal that we know about.

Eventually this modal will be removed in favor of desktop making smart assumptions, but before we can do that we need to understand how users can set or change those assumptions, ie the dataset name and default directory locations

--- a/app/scss/_drag-drop.scss
+++ b/app/scss/_drag-drop.scss
@@ -1,13 +1,35 @@
 .drag-drop {
-  background: rgba($color: #000000, $alpha: .6);
+  background: rgba($color: #ffffff, $alpha: .8);
   position: absolute;
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   top: 0;
   right: 0;
   left: 0;
   bottom: 0;
+
+  .inner {
+    width: 80%;
+    height: 70%;
+    border: .5rem dashed rgba($color: #000000, $alpha: .4);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    
+    .icon {
+      color: rgba($color: #000000, $alpha: .4);
+    }
+  }
+  .footer {
+    position: relative;
+    bottom: -5%;
+    background: white;
+    color: rgba($color: #000000, $alpha: 1);
+  }
 }
