--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -32,5 +32,7 @@
 @import "toast";
 @import "body";
 @import "metadata";
+@import "readme";
 
+@import '~easymde/dist/easymde.min.css';
 @import "dialog"
