feat(detailsBar): let's add a details bar on the dataset body page
First pass:
1) add Details type
2) add DetailsBar component and container
3) add `setDetailsBar` action that add the details to the UI state
4) add `DetailsBarContainer` to `Dataset` component

know issues rn:
- CSSTransition and Resizable components do not work together
- there is a weird stuttering when closing the details page
- there is no x to close the details bar yet

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -588,3 +588,24 @@ $header-font-size: .9rem;
     letter-spacing: 2px;
   }
 }
+
+// DetailsBar
+.details-bar {
+  position: absolute;
+  left: 0;
+  height: 100%;
+  overflow-wrap: break-word;
+  height: 100%;
+  font-size: $header-font-size;
+  cursor: default;
+  display: flex;
+  flex-direction: column;
+  background: $appBackground;
+  border-right: 1px solid $border-color;
+}
+
+#details {
+  position: absolute;
+  left: 0;
+  height: 100%;
+}
