fix(DetailsBar): fix transition
- remove CSSTransition in favor of using our own transition
- the outer div, className "details-bar-wrapper", controls height, background, position, the transition timing, and the right side border. In our react code, if we are showing the DetailsBar, we set "left" to zero, otherwise, we use the `datasetSidebarWidth` value to set "left" to negative the sidebar width.
- the inner div controls the opacity of the content, so we are fading in our content while we slide it in. When we "show" the details bar, the opacity is 1, when we hide, the opacity is 0

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -590,22 +590,20 @@ $header-font-size: .9rem;
 }
 
 // DetailsBar
-.details-bar {
+.details-bar-wrapper {
   position: absolute;
-  left: 0;
   height: 100%;
-  overflow-wrap: break-word;
-  height: 100%;
-  font-size: $header-font-size;
-  cursor: default;
-  display: flex;
-  flex-direction: column;
   background: $appBackground;
   border-right: 1px solid $border-color;
+  -webkit-transition-duration: 0.3s;
+  -moz-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  transition-duration: 0.3s;
 }
 
-#details {
-  position: absolute;
-  left: 0;
-  height: 100%;
+.details-bar-inner {
+  -webkit-transition-duration: 0.6s;
+  -moz-transition-duration: 0.6s;
+  -o-transition-duration: 0.6s;
+  transition-duration: 0.6s;
 }
