feat(fetchStats, fetchCommitStats): add api call to get stats!
`stats` is now a field on `CommitDetails` interface.

`COMMITSTATS_SUCC` saves stats to the `commitDetails` reducer

`STATS_SUCC` saves stats to the `workingDataset` reducer

- `stats` get passed into the `Body` component by the `BodyContainer`

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -607,3 +607,8 @@ $header-font-size: .9rem;
   -o-transition-duration: 0.6s;
   transition-duration: 0.6s;
 }
+
+.details-bar-content {
+  overflow-y: scroll;
+  overflow-wrap: break-word;
+}
