feat(stat): add numeric stat, quick stats component
also, make global stylesheet load in storybook

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -33,6 +33,7 @@
 @import "body";
 @import "metadata";
 @import "readme";
+@import "stats";
 
 @import '~easymde/dist/easymde.min.css';
 @import "dialog"
